internal/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: boil
  name: boil-svc
spec:
  selector:
    name: boil-pods
  ports:
  - name: web
    port: 5000
    targetPort: 5000
    protocol: TCP
